--- a/cc-fix-9-support-elixir-1.13-todo.org
+++ b/cc-fix-9-support-elixir-1.13-todo.org
@@ -6,15 +6,16 @@
 ** DONE remove debug scaffolding from .../text_renderers/dependencies.ex
 ** DONE remove debug scaffolding from lib/clean_mixer/arch_map.ex
 ** DONE remove debug scaffolding from lib/clean_mixer/arch_map/component.ex
-** TODO remove debug scaffolding from - .formatter.exs
-** TODO remove debug scaffolding from .tool-versions
+** TODO remove debug scaffolding from .formatter.exs
 ** TODO remove debug scaffolding from arch_map_filter.exs
+** TODO remove debug scaffolding from .tool-versions
 ** TODO remove debug scaffolding from lib/ui/list_task.ex
 ** TODO remove debug scaffolding from mix.exs
 ** TODO remove debug scaffolding from mix.lock
 ** TODO remove debug scaffolding from test/clean_mixer_test.exs
 ** TODO remove debug scaffolding from test/mix/tasks/list_test.exs
-** TODO remove transient test fixture test/support/fixtures/arch_map_filter_1.10.txt
+** DONE remove debug scaffolding from lib/clean_mixer/compiler_manifests/manifest.ex
+** DONE remove transient test fixture test/support/fixtures/arch_map_filter_1.10.txt
 ** DONE remove transient test fixture from test/support/fixtures/arch_map_filter_1.13.txt
 ** DONE remove transient test fixture from test/support/fixtures/arch_map_filter_1.13.txt
 ** DONE remove transient test fixture from test/support/fixtures/step1_1.13.2.txt
